Added some background images and a few style tweaks

--- a/css/grayscale.css
+++ b/css/grayscale.css
@@ -7,7 +7,7 @@
 body {
   width: 100%;
   height: 100%;
-  font-family: Lora,"Helvetica Neue",Helvetica,Arial,sans-serif;
+  font-family: 'Source Sans Pro', sans-serif;
   color: #fff;
   background-color: #000;
 }
@@ -25,7 +25,6 @@ h5,
 h6 {
   margin: 0 0 35px;
   text-transform: uppercase;
-  font-family: Montserrat,"Helvetica Neue",Helvetica,Arial,sans-serif;
   font-weight: 700;
   letter-spacing: 1px;
 }
@@ -34,6 +33,14 @@ p {
   margin: 0 0 25px;
   font-size: 18px;
   line-height: 1.5;
+}
+
+section {
+  padding: 50px 0;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  background-size: cover;
+  -o-background-size: cover;
 }
 
 @media(min-width:768px) {
@@ -65,7 +72,6 @@ a:focus {
   margin-bottom: 0;
   border-bottom: 1px solid rgba(255,255,255,.3);
   text-transform: uppercase;
-  font-family: Montserrat,"Helvetica Neue",Helvetica,Arial,sans-serif;
   background-color: #000;
 }
 
@@ -147,11 +153,8 @@ a:focus {
   padding: 20px 0;
   text-align: center;
   color: #fff;
+  background: #339900 url(../img/intro-bg.jpg) bottom center;
   background-color: #339900;
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  background-size: cover;
-  -o-background-size: cover;
 }
 
 .intro .intro-body {
@@ -165,6 +168,22 @@ a:focus {
 
 .intro .intro-body .intro-text {
   font-size: 18px;
+}
+
+.about {
+  background: #339900 url(../img/about-bg.jpg) center center;
+}
+
+.schedule {
+  background: #339900 url(../img/schedule-bg.jpg) center center;
+}
+
+.venue {
+  background: #339900 url(../img/venue-bg.jpg) bottom center;
+}
+
+.register {
+  background: #339900 url(../img/register-bg.jpg) bottom center;
 }
 
 @media(min-width:768px) {
@@ -274,20 +293,17 @@ a:focus {
 #map {
   width: 100%;
   height: 200px;
-  margin-top: 100px;
 }
 
 @media(min-width:767px) {
   #map {
     height: 400px;
-    margin-top: 250px;
   }
 }
 
 .btn {
   border-radius: 0;
   text-transform: uppercase;
-  font-family: Montserrat,"Helvetica Neue",Helvetica,Arial,sans-serif;
   font-weight: 400;
   -webkit-transition: all .3s ease-in-out;
   -moz-transition: all .3s ease-in-out;
