--- a/css/grayscale.css
+++ b/css/grayscale.css
@@ -8,6 +8,7 @@ body {
   width: 100%;
   height: 100%;
   font-family: 'Source Sans Pro', sans-serif;
+  font-size: 18px;
   color: #fff;
   background-color: #000;
 }
@@ -31,7 +32,6 @@ h6 {
 
 p {
   margin: 0 0 25px;
-  font-size: 18px;
   line-height: 1.5;
 }
 
@@ -186,6 +186,15 @@ a:focus {
   background: #339900 url(../img/register-bg.jpg) bottom center;
 }
 
+.schedule table {
+  width: 100%;
+}
+
+.schedule table td {
+  width: 50%;
+  padding: 10px;
+}
+
 @media(min-width:768px) {
   .intro {
     height: 100%;
@@ -199,46 +208,6 @@ a:focus {
   .intro .intro-body .intro-text {
     font-size: 26px;
   }
-}
-
-.btn-circle {
-  width: 70px;
-  height: 70px;
-  margin-top: 15px;
-  padding: 7px 16px;
-  border: 2px solid #fff;
-  border-radius: 100%!important;
-  font-size: 40px;
-  color: #fff;
-  background: 0 0;
-  -webkit-transition: background .3s ease-in-out;
-  -moz-transition: background .3s ease-in-out;
-  transition: background .3s ease-in-out;
-}
-
-.btn-circle:hover,
-.btn-circle:focus {
-  outline: 0;
-  color: #fff;
-  background: rgba(255,255,255,.1);
-}
-
-.btn-circle i.animated {
-  -webkit-transition-property: -webkit-transform;
-  -webkit-transition-duration: 1s;
-  -moz-transition-property: -moz-transform;
-  -moz-transition-duration: 1s;
-}
-
-.btn-circle:hover i.animated {
-  -webkit-animation-name: pulse;
-  -moz-animation-name: pulse;
-  -webkit-animation-duration: 1.5s;
-  -moz-animation-duration: 1.5s;
-  -webkit-animation-iteration-count: infinite;
-  -moz-animation-iteration-count: infinite;
-  -webkit-animation-timing-function: linear;
-  -moz-animation-timing-function: linear;
 }
 
 @-webkit-keyframes pulse {
