--- a/css/grayscale.css
+++ b/css/grayscale.css
@@ -31,7 +31,7 @@ h6 {
 }
 
 p {
-  margin: 0;
+  margin: 0 0 20px;
   line-height: 1.5;
 }
 
@@ -45,6 +45,7 @@ section {
 
 @media(min-width:768px) {
   p {
+    margin: 0 0 35px;
     font-size: 20px;
     line-height: 1.6;
   }
@@ -66,6 +67,7 @@ a:focus {
 blockquote {
   border: none;
   font-style: italic;
+  margin: 0;
 }
 
 blockquote .author {
@@ -172,8 +174,12 @@ blockquote .author {
   vertical-align: middle;
 }
 
-.intro .intro-body .brand-heading {
-  font-size: 40px;
+.intro .intro-body p {
+  margin: 0;
+}
+
+.intro .intro-body .presents {
+  font-size: 0.85em;
 }
 
 .intro .intro-body .intro-text {
